--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,15 @@
 [[constraint]]
   name = "github.com/karrick/tparse"
   version = "2.6.1"
+
+[[constraint]]
+  name = "github.com/aws/aws-lambda-go"
+  version = "1.x"
+
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.19.34"
+
+[[constraint]]
+  name = "github.com/google/uuid"
+  version = "1.1.1"
